--- a/app/templates/sidebar.html
+++ b/app/templates/sidebar.html
@@ -22,10 +22,10 @@
   <h5 class="card-header">Categories</h5>
   <div id="categories-card-body" class="card-body">
     <ul class="list-group list-group-flush">
-    {% for category, post_count in cwpc|dictsort %}
+    {% for category_name, value in cwpc|dictsort %}
       <li class="list-group-item d-flex justify-content-between align-items-center">
-        <a href="{{ url_for('categories.index', slug=category) }}">{{ category }}</a>
-        <span class="badge badge-primary badge-pill">{{ post_count }}</span>
+        <a href="{{ url_for('categories.index', slug=value[0]) }}">{{ category_name }}</a>
+        <span class="badge badge-primary badge-pill">{{ value[1] }}</span>
       </li>
     {% endfor %}
     </ul>
