--- a/app/static/main.css
+++ b/app/static/main.css
@@ -6,6 +6,10 @@ body {
     padding-top: 56px
 }
 
+html {
+    font-size: 16px;
+}
+
 .container {
     max-width: 1170px /* Max width taken by the content and the navbar. */
 }
@@ -49,6 +53,19 @@ body {
 
 .icons-bar svg {
   margin-left: 0.3rem;
+  float: right;
+}
+
+@media screen and (max-width: 768px) {
+  .icons-bar svg {
+      float: none;
+      margin-left: 0;
+      margin-right: 0.3rem;
+  }
+
+  .icons-bar {
+      margin-top: 1rem;
+  }
 }
 
 .search-icon {
