--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -2,13 +2,13 @@
 
 <footer class="mt-5 mb-2">
   <hr>
-  <div class="d-flex">
-    <div>
+  <div class="row">
+    <div class="col-md-4">
       {% if config.COPYRIGHT %}
       {{ config.COPYRIGHT | safe }}
       {% endif %}
     </div>
-    <div class="ml-auto icons-bar">
+    <div class="col-md-8 icons-bar">
       {% for social_name, address in get_socials().items() %}
       {% if social_name == 'Email:' %}
       <a href="mailto:{{address}}">{{ social_icon(social_name) }}</a>
