Fixed spelling mistake.

--- a/app/static/hilite.css
+++ b/app/static/hilite.css
@@ -26,7 +26,7 @@
 }
 
 /**
- * This styling takes care of highlithing the syntax. It was created for the
+ * This styling takes care of highlighting the syntax. It was created for the
  * pygment extension built-in styles.
  * Can be found online at: https://github.com/richleland/pygments-css
  */
