--- a/app/templates/sidebar.html
+++ b/app/templates/sidebar.html
@@ -20,7 +20,7 @@
 {% set cwpc = categories_w_post_count()  %}
 <div class="card my-4">
   <h5 class="card-header">Categories</h5>
-  <div id="categories-card-body" class="card-body">
+  <div class="card-body card-list-padding">
     <ul class="list-group list-group-flush">
     {% for category_name, value in cwpc|dictsort %}
       <li class="list-group-item d-flex justify-content-between align-items-center">
