--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -2,7 +2,7 @@
 
 {% if current_user.is_authenticated and search_bar_placement() and search_bar_placement() == 'navbar' %}
 <!--- Navbar shown ONLY to authenticated users. Contains search bar. --->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+<nav class="navbar navbar-expand-xl navbar-dark bg-primary fixed-top">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar1" aria-controls="navbar1" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -137,7 +137,7 @@
 </nav>
 {% else %}
 <!--- Navbar shown to anonymous users. Contains search bar. --->
-<nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
   <div class="container">
     <a class="navbar-brand" href="{{ url_for('main.index') }}">{{ config.SITE_NAME }}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar3" aria-controls="navbar3" aria-expanded="false" aria-label="Toggle navigation">
